--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <div class="nav__left">
                         <div id="mail">
                             <a href="#">
-                                <img src="./image/mail.png" alt="">
+                                <img src="./image/icon/mail.png" alt="">
                                 them_sky@gmail.com
                             </a>
                         </div>
                         <div id="hotline">
                             <a href="#">
-                                <img src="./image/phone.png" alt="">
+                                <img src="./image/icon/phone.png" alt="">
                                 + 189.234.5679
                             </a>
                         </div>
@@ -447,7 +447,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -463,7 +463,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -476,7 +476,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -492,7 +492,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -505,7 +505,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -521,7 +521,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -534,7 +534,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -567,7 +567,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -583,7 +583,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -596,7 +596,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -612,7 +612,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -625,7 +625,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -641,7 +641,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -654,7 +654,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -687,7 +687,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -703,7 +703,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -716,7 +716,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -732,7 +732,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -745,7 +745,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -761,7 +761,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -774,7 +774,7 @@
                                                 <p class="name__product">Cras ipsum massa</p>
                                                 <p class="price__product">$ <span>20.99</span></p>
                                                 <p class="rate__product">
-                                                    <img src="./image/rate.png" alt="">
+                                                    <img src="./image/icon/rate.png" alt="">
                                                 </p>
                                             </div>
                                         </li>
@@ -928,13 +928,15 @@
                                         <img src="./image/products/img_57.png" alt="">
                                     </a>
                                     <div class="txt_news">
-                                        <h1 style="font-size: 30px;">
-                                            NEWSLETTER
-                                        </h1>
-                                        <p>
-                                        Enjoy our newsletter to stay updated with the latest news and special sales <br>
-                                        Let's your email address here!
-                                        </p>
+                                        <div class="txt_sale">
+                                            <h1 style="font-size: 30px;">
+                                                NEWSLETTER
+                                            </h1>
+                                            <p>
+                                            Enjoy our newsletter to stay updated with the latest news and special sales <br>
+                                            Let's your email address here!
+                                            </p>
+                                        </div>
                                         <form class="form-inline justify-content-center pad" action="">
                                             <input type="text" class="form-control mb-2 mr-sm-2 ip_bt" id="email"  placeholder="Enter your email address" name="email">
                                             <button type="submit" class="btn btn-dark mb-2 ip_bt">
@@ -1070,7 +1072,7 @@
             <img src="./image/products/img_45.png" alt="">
             <div class="text-vd">
                 <a href="javascript:void(0)" class="show_video">
-                    <img src="./image/play_video.png" alt="">
+                    <img src="./image/icon/play_video.png" alt="">
                 </a>
                 <p>LOOK BOOK HIGH FASHION</p>
                 <p>HOT VIDEO OF THIS YEAR</p> 
