--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="price_products">
                                     <span class="price">
-                                        Cart : <span style="font-weight: 600;">$0.00</span>
+                                        <span>Cart :</span><span style="font-weight: 600;">$0.00</span>
                                     </span>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                         <i class="fas fa-bars"></i>
                         <span style="margin-left: 10px;font-weight: 600;">SHOP BY CATEGORY</span> 
                     </div>
-                    <div class="header__menu col-md-8">
+                    <div class="header__menu col-md-9">
                         <ul class="header__menu-list">
                             <li class="item-menu">
                                 <a href="">
@@ -817,7 +817,7 @@
                                 </div>
                                 <div class="product__item-wrapp row">
                                     <div class="product__item col-md-4">
-                                        <div class="box-img">
+                                        <div class="box-img" id="img_main">
                                             <img src="./image/products/img_7.png" alt="">
                                         </div>
                                         <div class="info__product text-center">
