--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/responsive.css">
-    <link rel="stylesheet" href="./styles/mobile.css">
+    <!-- <link rel="stylesheet" href="./styles/mobile.css"> -->
     <link rel="stylesheet" href="./vendor/js/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./vendor/js/owlcarousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="./styles/style.css">
@@ -125,24 +125,152 @@
                                     BLOG
                                     <i class="fas fa-angle-down"></i>
                                 </a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="item-menu">
                                 <a href="">
                                     SHORTCODE
                                     <i class="fas fa-angle-down"></i>
                                 </a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="item-menu">
                                 <a href="">
                                     PAGE
                                     <i class="fas fa-angle-down"></i>
                                 </a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="item-menu">
                                 <a href="">
                                     THEME FEATURES
                                     <i class="fas fa-angle-down"></i>
                                 </a>
+                                <ul class="sub-menu">
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="">
+                                            Submenu 1
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="item-menu">
                                 <a href="">
@@ -182,36 +310,206 @@
                             <a href="">
                                 <i class="fas fa-store icon_f"></i>
                                 SHOP
-                                <img src="./image/icon/btn_right.png" alt="">
                             </a>
+                            <span class="show__sub-menu">
+                                <img src="./image/icon/btn_right.png" alt="">
+                            </span>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item-menu">
                             <a href="">
                                 <i class="fab fa-blogger icon_f"></i>
                                 BLOG
-                                 <img src="./image/icon/btn_right.png" alt="">
                             </a>
+                            <span class="show__sub-menu">
+                                <img src="./image/icon/btn_right.png" alt="">
+                            </span>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item-menu">
                             <a href="">
                                 <i class="fas fa-qrcode icon_f"></i>
                                 SHORTCODE
-                                 <img src="./image/icon/btn_right.png" alt="">
                             </a>
+                            <span class="show__sub-menu">
+                                <img src="./image/icon/btn_right.png" alt="">
+                            </span>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item-menu">
                             <a href="">
                                 <i class="fas fa-pager icon_f"></i>
                                 PAGE
-                                 <img src="./image/icon/btn_right.png" alt="">
                             </a>
+                            <span class="show__sub-menu">
+                                <img src="./image/icon/btn_right.png" alt="">
+                            </span>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item-menu">
                             <a href="">
                                 <i class="fab fa-ethereum icon_f"></i>
                                 THEME FEATURES
-                                 <img src="./image/icon/btn_right.png" alt="">
                             </a>
+                            <span class="show__sub-menu">
+                                <img src="./image/icon/btn_right.png" alt="">
+                            </span>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="">
+                                        Submenu 1
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="item-menu">
                             <a href="">
